# TaskManager_System

./: CMakeLists.txt  Command.h  Logger.cpp  Logger.h  README.md  TableFormatter.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  log.txt  main.cpp  tasks.txt
